loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:2: error: unclosed character literal
  if (estFaceMur() == 'false') {
                            ^LoopCourse:2: error: ')' expected but something found.
  if (estFaceMur() == 'false') {
                            ^