loopfor.LoopCourse.scala.code
for (i <- 1 to 10) {
  if (estFaceMur() == 'false') {
    avance()
  }else {
    gauche()
  }
}